force-app/main/default/objects/VehicleMasterMVData__c/VehicleMasterMVData__c.object-meta.xml
<CustomObject>
    <label>VehicleMasterMVData</label>
    <nameField>
        <label>VehicleMasterMVData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VehicleMasterMVData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>