force-app/main/default/objects/VehicleMasterMVData__c/fields/ModelName__c.field-meta.xml
<CustomField>
    <fullName>ModelName__c</fullName>
    <label>ModelName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>