force-app/main/default/objects/VehicleMasterMVData__c/fields/VariantName__c.field-meta.xml
<CustomField>
    <fullName>VariantName__c</fullName>
    <label>VariantName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>